# AutonomyCLTrust

./: .gitignore  NOTES.txt  README.md
analysis/R_scripts/indiv_measures/: mdmt.Rmd  p_auto.Rmd  p_trust.Rmd  pupil_diameter.Rmd  tapping_err.Rmd  tlx.Rmd  traj_err.Rmd
analysis/R_scripts/interactions/: cl_trust.Rmd  perf_trust_corr.Rmd  tap_impact.Rmd  traj_err_cl_ie.Rmd  trust_correlation.Rmd
analysis/R_scripts/learning_effect/: pupil.Rmd  tapping_long.Rmd  tapping_short.Rmd  traj_tracking.Rmd
experiment/: dataframe_grouping.py
experiment/combined_dataframes/: combined.csv
experiment/dataframes/: mdmt.csv  p_auto.csv  p_trust.csv  pupil.csv  tapping_err.csv  tlx.csv  traj_err.csv
experiment/grouped_dataframes/: grouped_mdmt.csv  grouped_p_auto.csv  grouped_p_trust.csv  grouped_pupil.csv  grouped_tapping_err.csv  grouped_tlx.csv  grouped_traj_err.csv
experiment/primary task/: learning_check.py  traj_error.ipynb
experiment/primary task/learning_effect/: tap_impact0.csv  tap_impact1.csv  tap_impact2.csv  tap_impact3.csv  tap_impact4.csv
experiment/secondary task/: learning_check.py  recalculate_error.py  rhythm_method.py
experiment/secondary task/learning_effect/: eye0.csv  eye1.csv  eye2.csv  eye3.csv  eye4.csv  taplong0.csv  taplong1.csv  taplong2.csv  taplong3.csv  taplong4.csv  tapshort0.csv  tapshort1.csv  tapshort2.csv  tapshort3.csv  tapshort4.csv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/ros2_package/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_package/launch/: controller.launch.py  gazebo.launch.py  real.launch.py  rviz.launch.py
ros2_ws/src/ros2_package/ros2_package/: data_logger.py
ros2_ws/src/ros2_package/scripts/: traj_recorder.py
ros2_ws/src/ros2_package/src/: const_br.cpp  gazebo_controller.cpp  marker_publisher.cpp  position_talker.cpp  real_controller.cpp
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
